--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
         <div id="content">
             <script>
                 var path = window.location.pathname;
-                document.getElementById('content').innerHTML = '<iframe width="100%" height="100%" frameborder="0" src="https://layarkoco21.github.io/lk21'+path+'"></iframe>';
+                document.getElementById('content').innerHTML = '<a width="100%" height="100%" frameborder="0" src="https://layarkoco21.github.io/lk21'+path+'"></a>';
             </script>
         </div>
     </body>
