--- a/404.html
+++ b/404.html
@@ -5,22 +5,25 @@
     <meta name="publisher" content="Layarkoco21"><meta name="distribution" content="global">
     <meta http-equiv="copyright@ 2024 Layarkoco21" content="Layarkoco21">
     <head>
-        <title>Lk21</title>
+        <title>Page not found · Lk21</title>
         <style type="text/css">
             body, html {
                 margin: 0; padding: 0; height: 100%; overflow: hidden;
             }
             #content {
-                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+                position:absolute; left: 0; right: 0; bottom: 0; top: 70px;
+                margin: 0 auto;
+                width: 50%;
+                max-width: 100%;
+                text-align: center;
+                font-weight: bold;
+                font-size: xx-large;
             }
         </style>
     </head>
     <body>
         <div id="content">
-            <script>
-                var path = window.location.pathname;
-                document.getElementById('content').innerHTML = '<a width="100%" height="100%" frameborder="0" src="https://layarkoco21.github.io/lk21'+path+'"></a>';
-            </script>
+            404 page not found
         </div>
     </body>
 </html>
